<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp">

        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="#23408E"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:textSize="30sp"
                    tools:text="Country" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:padding="5dp"
                        android:text="@string/cases_header"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:padding="5dp"
                        android:text="@string/active_header"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:padding="5dp"
                        android:text="@string/recovered_header"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:padding="5dp"
                        android:text="@string/deaths_header"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:padding="5dp"
                        android:textColor="@color/card_value"
                        tools:text="100000" />

                    <TextView
                        android:id="@+id/tv_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:padding="5dp"
                        tools:text="100000"
                        android:textColor="@color/card_value" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:padding="5dp"
                        tools:text="100000"
                        android:textColor="@color/card_value" />

                    <TextView
                        android:id="@+id/tv_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:padding="5dp"
                        tools:text="100000"
                        android:textColor="@color/card_value" />

                </GridLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter" />

</RelativeLayout>