<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="2sp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    tools:text="Country" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_card_height"
            android:layout_marginTop="20dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="#ff1744"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/deaths"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="10" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_card_height"
            android:layout_marginTop="7dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="#fb8c00"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/active"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="10" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_card_height"
            android:layout_marginTop="7dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="#ffeb3b"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cases"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="10" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_card_height"
            android:layout_marginTop="7dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/recovered"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="10" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_all_countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/view_all_countries"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>